modified:   index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
           <ul class="navbar-list">
             <li class="navbar-item">
-              <a class="navbar-link" href="#call">Call for Papers</a>
+              <a class="navbar-link" href="#call">Submission Guidelines</a>
             </li>
             <li class="navbar-item">
               <a class="navbar-link" href="#location">Location Info</a>
@@ -43,12 +43,27 @@
       </nav>
       <div class="container">
         <p class="p-summary">
-        The Department of Language studies at University of Toronto Mississauga is pleased to announce the 2016 meeting of the Montréal-Ottawa-Toronto-Hamilton Syntax Workshop (MOTH 2016) on <span class=dt-duration>April 9 and 10</span>.
+	The department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal – Ottawa – Toronto – Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
+	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
         </p>
+	<p>
+	Our invited speaker this year will be <strong>Ivona Kučerová</strong> (McMaster University).
+	</p>
       </div>
       <div class="container">
         <div id="call">
-          <h4>Call for Papers</h4>
+          <h4>Submission Guidelines</h4>
+	  <p>
+	  Abstracts must not exceed one A4 or letter page in length (including examples, tables, and figures, but excluding references), have 1 inch (2.5cm) margins, and be set in Times New Roman with single spacing and a font no smaller than 11pt. 
+	  All abstracts must be submitted in PDF format via e-mail to <a href="mailto:moth2016@gmail.com">moth2016@gmail.com</a>.
+	  </p>
+	  <p>
+	  Abstracts must be anonymous and contain no information which identifies the author.
+	  Author information (full name(s) of author(s), affiliation(s), and abstract title) should be provided in the body of the e-mail. No individual can submit more than one independent and one joint (or two joint) abstracts.
+	  </p>
+	  <p>
+	  <strong>Deadline:</strong> January 15th 2016, at 23:59 EST.
+	  </p>
         </div>
       </div>
       <div class="container">
