modified:   index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </nav>
       <div class="container">
         <p class="p-summary">
-	The department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal – Ottawa – Toronto – Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
+	The department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal-Ottawa-Toronto-Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
 	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
         </p>
 	<p>
