modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
         </p>
 	<p>
-	Our invited speaker this year will be <strong>Ivona Kučerová</strong> (McMaster University).
+	Our invited speaker this year will be <a href="http://www.humanities.mcmaster.ca/~kucerov"><strong>Ivona Kučerová</strong></a> (McMaster University).
 	</p>
       </div>
       <div class="container">
