--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h4>Submission Guidelines</h4>
 	  <p>
 	  Abstracts must not exceed one A4 or letter page in length (including examples, tables, and figures, but excluding references), have 1 inch (2.5cm) margins, and be set in Times New Roman with single spacing and a font no smaller than 11pt. 
-	  All abstracts must be submitted in PDF format via e-mail to <a href="mailto:moth2016@gmail.com">moth2016@gmail.com</a>.
+	  All abstracts must be submitted in PDF format via e-mail to <a href="mailto:2016moth@gmail.com">2016moth@gmail.com</a>.
 	  </p>
 	  <p>
 	  Abstracts must be anonymous and contain no information which identifies the author.
