--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	  Author information (full name(s) of author(s), affiliation(s), and abstract title) should be provided in the body of the e-mail. No individual can submit more than one independent and one joint (or two joint) abstracts.
 	  </p>
 	  <p>
-	  <strong>Deadline:</strong> January 15th 2016, at 23:59 EST.
+	  <strong>Deadline:</strong> January 31st 2016, at 23:59 EST.
 	  </p>
         </div>
       </div>
