modified:   css/custom.css 	modified:   index.html 	new file:   static/AhmedMOTH2016.pdf 	new file:   static/AsudehSiddiqiMOTH2016.pdf 	new file:   static/BandstraMOTH2016.pdf 	new file:   static/BembridgeMOTH2016.pdf 	new file:   static/BrunoMOTH2016.pdf 	new file:   static/CarrierMOTH2016.pdf 	new file:   static/ChapmanHacklMOTH2016.pdf 	new file:   static/HucklebridgeMOTH2016.pdf 	new file:   static/JiangMOTH2016.pdf 	new file:   static/KybalchychMOTH2016.pdf 	new file:   static/LiuMOTH2016.pdf 	new file:   static/McKenzieMOTH2016.pdf 	new file:   static/NdayiragijeMOTH2016.pdf 	new file:   static/NieMOTH2016.pdf 	new file:   static/SchwarzMOTH2016.pdf 	new file:   static/Stevens-GuilleMOTH2016.pdf 	new file:   static/YawneyMOTH2016.pdf

--- a/index.html
+++ b/index.html
@@ -90,6 +90,229 @@
       <div class="container">
         <div id="programme">
           <h4>Programme</h4>
+			  <table class="u-full-width">
+				<tr>
+					<th colspan="2">Friday, April 15, 2016</th>
+				</tr>
+				<tr>
+					<td>9:00-10:00 am</td>
+					<td>Registration and breakfast</td>
+				</tr>
+				<tr>
+					<td rowspan="3">10:00-11:30 am</td>
+					<td class="prog-cell">
+						Julien Carrier (University of Toronto), 
+						<a target="_blank" href="static/CarrierMOTH2016.pdf">
+							<em>The Double Object Construction in Inuktitut</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Bing’er Jiang (McGill University),
+						<a target="_blank" href="static/JiangMOTH2016.pdf">
+							<em>Gei and the double object construction in Mandarin Chinese</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Hong-Yan Liu (University of Toronto),
+						<a target="_blank" href="static/LiuMOTH2016.pdf">
+							<em>The Mandarin ba-construction</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>11:30-11:45 am</td>
+					<td>Break</td>
+				</tr>
+				<tr>
+					<td rowspan="2">11:45 am-12:45 pm</td>
+					<td class="prog-cell"> TBA </td>
+				</tr>
+				<tr>
+					<td class="prog-cell">Amer Ahmed (York University),
+						<a target="_blank" href="static/AhmedMOTH2016.pdf">
+							<em>On case assignment in Standard Arabic</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>12:45-2:00 pm</td>
+					<td>Lunch</td>
+				</tr>
+				<tr>
+					<td rowspan="3">
+						2:00-3:30 pm
+					</td>
+					<td class="prog-cell">
+						Cassandra Chapman (McMaster University) &amp; Martin Hackl (MIT),
+						<a target="_blank" href="static/ChapmanHacklMOTH2016.pdf">
+							<em>Processing of logical form structure: Evidence from reconstruction for anaphoric binding</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Gavin Bembridge (York University),
+						<a target="_blank" href="static.BembridgeMOTH2016.pdf">
+							<em>
+								Negation in American Sign Language: The view from the Interface
+							</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Ash Asudeh (Carleton University/Oxford) &amp; Daniel Siddiqi (Carleton University),
+						<a target="_blank" href="static/AsudehSiddiqiMOTH2016.pdf">
+							<em>Distributed Lexical-Functional Grammar</em>
+						</a>
+					</td>
+				</tr>
+				<tr> 
+					<td>3:30-4:00 pm</td>
+					<td> Coffee Break</td>
+				</tr>
+				<tr>
+					<td rowspan="2">
+						4:00-5:00 pm
+					</td>
+					<td>
+						Martha Schwarz (McGill University),
+						<a target="_blank" href="static/SchwarzMOTH2016.pdf">
+							<em>Nepali Ergative Case Assignment</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Yining Nie (NYU),
+						<a target="_blank" href="static/NieMOTH2016.pdf">
+							<em>Why is there NOM - NOM but no ERG - ERG ?</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>5:00-5:15</td>
+					<td>Break</td>
+				</tr>
+				<tr>
+					<td>5:15-6:15</td>
+					<td> <strong>Invited Speaker:</strong>
+						<br/>
+						Ivona Ku&#269;erov&#225; (McMaster University),
+						<em>Talk Title TBA</em>
+					</td>
+				</tr>
+			  </table>
+			  <table class="u-full-width">
+				 <tr>
+					<th colspan="2">Saturday, April 16, 2016</th>
+				</tr>
+				<tr>
+					<td>9:00 am-10:00 am</td>
+					<td>Registration and breakfast</td>
+				</tr>
+				<tr>
+					<td rowspan="3">10:00-11:30 am</td>
+					<td class="prog-cell">
+						Chris Bruno (McGill University), 
+						<a target="_blank" href="static/BrunoMOTH2016.pdf">
+							<em>Three kinds of locative preposing</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						TBA				
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Ievgeniia Kybalchych (UQAM),
+						<a target="_blank" href="static/KybalchychMOTH2016.pdf">
+							<em>What i-f?</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>11:30-11:45 am</td>
+					<td>Break</td>
+				</tr>
+				<tr>
+					<td rowspan="2">11:45 am-12:45 pm</td>
+					<td class="prog-cell">
+						Zoë McKenzie (University of Toronto)
+						<a target="_blank" href="static/McKenzieMOTH2016.pdf">
+							<em>Multifunctionality of the Optative Mood in Inuktitut</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">Heather Yawney (University of Toronto),
+						<a target="_blank" href="static/YawneyMOTH2016.pdf">
+							<em>Turkish Verbal Suspended Affixation</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td>12:45-2:00 pm</td>
+					<td>Lunch</td>
+				</tr>
+				<tr>
+					<td rowspan="2">
+						2:00-3:00 pm
+					</td>
+					<td class="prog-cell">
+						Dylan Bandstra (University of Toronto),
+						<a target="_blank" href="static/BandstraMOTH2016.pdf">
+							<em>Inalienable Possession in Tlingit</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Sherry Hucklebridge (University of Toronto),
+						<a target="_blank" href="static/HucklebridgeMOTH2016.pdf">
+							<em>
+								Relativization as Nominalization: Head-Internal Relative Clauses in Tłı&#807;cho&#807; Yatıı̀
+							</em>
+						</a>
+					</td>
+				</tr>
+				<tr> 
+					<td>3:00-3:30 pm</td>
+					<td> Coffee Break</td>
+				</tr>
+				<tr>
+					<td rowspan="3">
+						3:30-4:30 pm
+					</td>
+					<td>
+						Symon Jory Stevens-Guille (University of Toronto),
+						<a target="_blank" href="static/Stevens-GuilleMOTH2016.pdf">
+							<em>
+								A Timing Based Account of RNR Identity
+							</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell">
+						Juvénal Ndayiragije (University of Toronto),
+						<a target="_blank" href="static/NdayiragijeMOTH2016.pdf">
+							<em>
+								There is a Cost to External Merge
+							</em>
+						</a>
+					</td>
+				</tr>
+				<tr>
+					<td class="prog-cell"> Closing Remarks</td>
+				<tr>
+			  </table>
         </div>
       </div>
     </div>
