--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li class="navbar-item">
               <a class="navbar-item" href="#programme">Programme</a>
             </li>
+            <li class="navbar-item">
+            	<a class="navbar-link" href="#registration">Registration</a>
+            </li>
           </ul>	
         </div>
       </nav>
@@ -317,6 +320,7 @@
       </div>
       <div class="container">
       	<div id="registration">
+      		<h4>Registration</h4>
       		<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       	</div>
       </div>
