--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="navbar-link" href="#location">Location Info</a>
             </li>
             <li class="navbar-item">
-              <a class="navbar-item" href="#programme">Programme</a>
+              <a class="navbar-link" href="#programme">Programme</a>
             </li>
             <li class="navbar-item">
             	<a class="navbar-link" href="#registration">Registration</a>
