--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       <div class="container">
         <div id="programme">
           <h4>Programme</h4>
+          <p>All</p>
 			  <table class="u-full-width">
 				<tr>
 					<th colspan="2">Friday, April 15, 2016</th>
@@ -207,6 +208,12 @@
 						<br/>
 						Ivona Ku&#269;erov&#225; (McMaster University),
 						<em>Talk Title TBA</em>
+					</td>
+				</tr>
+				<tr>
+					<td>6:30 pm</td>
+					<td>
+						<strong>Conference Dinner</strong>
 					</td>
 				</tr>
 			  </table>
