--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </nav>
       <div class="container">
         <p class="p-summary">
-	The department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal-Ottawa-Toronto-Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
+	The Department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal-Ottawa-Toronto-Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
 	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
         </p>
 	<p>
@@ -83,6 +83,12 @@
         <br>
         <span class="p-postal-code">L5L 1C6</span>
         </p>
+        <p>
+        	<strong>Getting to campus:</strong> UofT runs a regular Shuttle bus between the Downtown and Mississauga campuses. 
+        	Information can be found <a href="https://www.utm.utoronto.ca/shuttle/services-schedules/utm-st-george-service">here.</a>
+        	<br/>
+        	Further information, including public transit options, driving directions, and campus maps can be found <a href="http://www.utm.utoronto.ca/about-us/contact-us/maps-directions">here.</a>
+        </p>
       </div>
       <div class="eight columns">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11567.232178638647!2d-79.6609495!3d43.5480431!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x713c168866b9f492!2sUniversity+of+Toronto+Mississauga!5e0!3m2!1sen!2sca!4v1444848577436" width=100% height=100% border="0" style="border:0" allowfullscreen></iframe>
@@ -91,8 +97,17 @@
         </div>
       </div>
       <div class="container">
+      	<div id="accommodation">
+      		<h4>Accommodation</h4>
+      		<p>The closest hotel to the UTM campus is <a href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
+      		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
+      		<p>If you prefer to stay closer to the downtown campus, the closest being <a href="http://www.hitorontoblooryorkville.ca"> The Holiday Inn Toronto Bloor Yorkville</a></p>
+      	</div>
+      </div>
+      <div class="container">
         <div id="programme">
           <h4>Programme</h4>
+          <p>All sessions will be in <a href="https://www.google.ca/maps/place/Deerfield+Hall/@43.5508679,-79.6660858,15z/data=!4m2!3m1!1s0x0:0xbc91871410524aaf">Deerfield Hall</a> Room 2060</p>
           <table class="u-full-width">
 				<tr>
 					<th colspan="2">Friday, April 15, 2016</th>
@@ -212,7 +227,7 @@
 				<tr>
 					<td>6:30 pm</td>
 					<td>
-						<strong>Conference Dinner</strong>
+						<strong>Conference Dinner</strong> (On UTM campus. Room TBD)
 					</td>
 				</tr>
 			  </table>
