--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
       <nav class="navbar">
         <div class="container">
           <ul class="navbar-list">
+            <!--
             <li class="navbar-item">
               <a class="navbar-link" href="#call">Submission Guidelines</a>
             </li>
+            -->
             <li class="navbar-item">
               <a class="navbar-link" href="#location">Location Info</a>
             </li>
@@ -53,6 +55,7 @@
 	Our invited speaker this year will be <a href="http://www.humanities.mcmaster.ca/~kucerov"><strong>Ivona Kučerová</strong></a> (McMaster University).
 	</p>
       </div>
+      <!--
       <div class="container">
         <div id="call">
           <h4>Submission Guidelines</h4>
@@ -69,6 +72,7 @@
 	  </p>
         </div>
       </div>
+      -->
       <div class="container">
         <div id="location">
           <h4>Location Information</h4>
@@ -101,7 +105,7 @@
       		<h4>Accommodation</h4>
       		<p>The closest hotel to the UTM campus is <a href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
-      		<p>If you prefer to stay closer to the downtown campus, the closest being <a href="http://www.hitorontoblooryorkville.ca"> The Holiday Inn Toronto Bloor Yorkville</a></p>
+      		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca"> The Holiday Inn Toronto Bloor Yorkville</a></p>
       	</div>
       </div>
       <div class="container">
