--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
         </p>
 	<p>
-	Our invited speaker this year will be <a href="http://www.humanities.mcmaster.ca/~kucerov"><strong>Ivona Kučerová</strong></a> (McMaster University).
+	Our invited speaker this year will be <a target="_blank" href="http://www.humanities.mcmaster.ca/~kucerov"><strong>Ivona Kučerová</strong></a> (McMaster University).
 	</p>
       </div>
       <!--
@@ -89,9 +89,9 @@
         </p>
         <p>
         	<strong>Getting to campus:</strong> UofT runs a regular Shuttle bus between the Downtown and Mississauga campuses. 
-        	Information can be found <a href="https://www.utm.utoronto.ca/shuttle/services-schedules/utm-st-george-service">here.</a>
+        	Information can be found <a target="_blank" href="https://www.utm.utoronto.ca/shuttle/services-schedules/utm-st-george-service">here.</a>
         	<br/>
-        	Further information, including public transit options, driving directions, and campus maps can be found <a href="http://www.utm.utoronto.ca/about-us/contact-us/maps-directions">here.</a>
+        	Further information, including public transit options, driving directions, and campus maps can be found <a href="http://www.utm.utoronto.ca/about-us/contact-us/maps-directions" target="_blank">here.</a>
         </p>
       </div>
       <div class="eight columns">
@@ -103,9 +103,9 @@
       <div class="container">
       	<div id="accommodation">
       		<h4>Accommodation</h4>
-      		<p>The closest hotel to the UTM campus is <a href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
+      		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
-      		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca"> The Holiday Inn Toronto Bloor Yorkville</a></p>
+      		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca" target="_blank"> The Holiday Inn Toronto Bloor Yorkville</a></p>
       	</div>
       </div>
       <div class="container">
