--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
       		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca" target="_blank"> The Holiday Inn Toronto Bloor Yorkville</a></p>
+      		<p>Limited crash space may be available to students. If you are interested please contact <a href="mailto:becky.tollan@mail.utoronto.ca">Becky Tollan</a> to request it.</p>
       	</div>
       </div>
       <div class="container">
