--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </p>
         <p>
         	<strong>Getting to campus:</strong> UofT runs a regular Shuttle bus between the Downtown and Mississauga campuses. 
-        	Information can be found <a target="_blank" href="https://www.utm.utoronto.ca/shuttle/services-schedules/utm-st-george-service">here.</a>
+        	Information can be found <strong><a target="_blank" href="https://www.utm.utoronto.ca/shuttle/services-schedules/utm-st-george-service">here.</a></strong>
         	<br/>
-        	Further information, including public transit options, driving directions, and campus maps can be found <a href="http://www.utm.utoronto.ca/about-us/contact-us/maps-directions" target="_blank">here.</a>
+        	Further information, including public transit options, driving directions, and campus maps can be found <a href="http://www.utm.utoronto.ca/about-us/contact-us/maps-directions" target="_blank"><strong>here.</strong></a>
         </p>
       </div>
       <div class="eight columns">
@@ -103,10 +103,10 @@
       <div class="container">
       	<div id="accommodation">
       		<h4>Accommodation</h4>
-      		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/">The Glenerin Inn</a>. 
+      		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/"><strong>The Glenerin Inn</strong></a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
       		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca" target="_blank"> The Holiday Inn Toronto Bloor Yorkville</a></p>
-      		<p>Limited crash space may be available to students. If you are interested please contact <a href="mailto:becky.tollan@mail.utoronto.ca">Becky Tollan</a> to request it.</p>
+      		<p>Limited crash space may be available to students. If you are interested please contact <a href="mailto:becky.tollan@mail.utoronto.ca"><strong>Becky Tollan</strong></a> to request it.</p>
       	</div>
       </div>
       <div class="container">
