--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				</tr>
 				<tr>
 					<td rowspan="2">11:45 am-12:45 pm</td>
-					<td class="prog-cell"> TBA </td>
+					<td class="prog-cell">Sigwan Thivierge (Concordia University), <em>A Morphosyntactic Analysis of Nishnaabemwin Person Hierarchy Effects</em> </td>
 				</tr>
 				<tr>
 					<td class="prog-cell">Amer Ahmed (York University),
