--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
               <a class="navbar-link" href="#location">Location Info</a>
             </li>
             <li class="navbar-item">
+            	<a class="navbar-link" href="accommodation">Accommodation Information</a>
+            </li>
+            <li class="navbar-item">
               <a class="navbar-link" href="#programme">Programme</a>
             </li>
             <li class="navbar-item">
@@ -102,7 +105,7 @@
       </div>
       <div class="container">
       	<div id="accommodation">
-      		<h4>Accommodation</h4>
+      		<h4>Accommodation Information</h4>
       		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/"><strong>The Glenerin Inn</strong></a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
       		<p>If you prefer to stay closer to the downtown campus, there are a variety of nearby accommodations, the closest being <a href="http://www.hitorontoblooryorkville.ca" target="_blank"> The Holiday Inn Toronto Bloor Yorkville</a></p>
