--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="navbar-link" href="#location">Location Info</a>
             </li>
             <li class="navbar-item">
-            	<a class="navbar-link" href="accommodation">Accommodation Information</a>
+            	<a class="navbar-link" href="#accommodation">Accommodation Information</a>
             </li>
             <li class="navbar-item">
               <a class="navbar-link" href="#programme">Programme</a>
@@ -190,7 +190,7 @@
 				<tr>
 					<td class="prog-cell">
 						Gavin Bembridge (York University),
-						<a target="_blank" href="static.BembridgeMOTH2016.pdf">
+						<a target="_blank" href="static/BembridgeMOTH2016.pdf">
 							<em>
 								Negation in American Sign Language: The view from the Interface
 							</em>
