--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 					<td> <strong>Invited Speaker:</strong>
 						<br/>
 						Ivona Ku&#269;erov&#225; (McMaster University),
-						<em>Talk Title TBA</em>
+						<a target="_blank" href="static/KucerovaMOTH2016.pdf"><em>When nominatives fail more than to agree</em></a>
 					</td>
 				</tr>
 				<tr>
