modified:   index.html 	new file:   static/PetersMOTH2016.pdf

--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
 				</tr>
 				<tr>
 					<td class="prog-cell">
-						TBA				
+                                            Andrew Peters (York University),
+                                            <a href="static/PetersMOTH2016.pdf" target="_blank"><em>Multiple Modal Constructions in Rural Chesapeake English and Mandarin Chinese</em></a>                                
 					</td>
 				</tr>
 				<tr>
