modified:   index.html

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 				</tr>
 				<tr>
 					<td class="prog-cell">
-						Juvénal Ndayiragije (University of Toronto),
+						Juvénal Ndayiragije (University of Toronto Scarborough),
 						<a target="_blank" href="static/NdayiragijeMOTH2016.pdf">
 							<em>
 								There is a Cost to External Merge
