modified:   css/custom.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             	<a class="navbar-link" href="#accommodation">Accommodation Information</a>
             </li>
             <li class="navbar-item">
-              <a class="navbar-link" href="#programme">Programme</a>
+            	<a class="navbar-link" href="#registration">Registration</a>
             </li>
             <li class="navbar-item">
-            	<a class="navbar-link" href="#registration">Registration</a>
+              <a class="navbar-link" href="#programme">Programme</a>
             </li>
           </ul>	
         </div>
@@ -77,7 +77,7 @@
       </div>
       -->
       <div class="container">
-        <div id="location">
+        <div id="location" class="info-section">
           <h4>Location Information</h4>
     <div class="row">
       <div class="four columns">
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="container">
-      	<div id="accommodation">
+      	<div id="accommodation" class="info-section">
       		<h4>Accommodation Information</h4>
       		<p>The closest hotel to the UTM campus is <a target="_blank" href="http://www.glenerininn.com/"><strong>The Glenerin Inn</strong></a>. 
       		Mention that you are attending a UTM Conference for a special UTM corporate rate.</p>
@@ -113,7 +113,13 @@
       	</div>
       </div>
       <div class="container">
-        <div id="programme">
+      	<div id="registration" class="info-section">
+      		<h4>Registration</h4>
+      		<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+      	</div>
+      </div>
+      <div class="container">
+        <div id="programme" class="info-section">
           <h4>Programme</h4>
           <p>All sessions will be in <a href="https://www.google.ca/maps/place/Deerfield+Hall/@43.5508679,-79.6660858,15z/data=!4m2!3m1!1s0x0:0xbc91871410524aaf">Deerfield Hall</a> Room 2060</p>
           <table class="u-full-width">
@@ -349,12 +355,12 @@
 			  </table>
         </div>
       </div>
-      <div class="container">
-      	<div id="registration">
-      		<h4>Registration</h4>
-      		<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-      	</div>
+      <div class="container info-section">
+	      <footer>
+		      <h4>Local Organizers</h4>
+		      Arsalan Kahnemuyipour, Rebecca Tollan, Dan Milway
+	      </footer>
       </div>
     </div>
-	</body>
+</body>
 </html>
