--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         </div>
       </nav>
       <div class="container">
+        <div class="info-section">
+	
         <p class="p-summary">
 	The Department of Language Studies at the University of Toronto Mississauga is pleased to announce that the 4th Montréal-Ottawa-Toronto-Hamilton syntax workshop (MOTH) will be held on <span class="dt-duration">April 15-16, 2016</span>. 
 	MOTH is an annual regional workshop which brings together graduate students and faculty from across southern Ontario and Québec; presenters from further afield are also welcome. We invite submissions on any area of syntax and its interfaces, including both theoretical and experimental work.
@@ -57,6 +59,9 @@
 	<p>
 	Our invited speaker this year will be <a target="_blank" href="http://www.humanities.mcmaster.ca/~kucerov"><strong>Ivona Kučerová</strong></a> (McMaster University).
 	</p>
+	<h5>Local Organizers</h5>
+	<a href="https://focus.library.utoronto.ca/people/1804-Arsalan_Kahnemuyipour">Arsalan Kahnemuyipour</a>, <a href="http://linguistics.utoronto.ca/profiles/Student_Profile.php?SID=359">Rebecca Tollan</a>, <a href=http://milway.ca>Dan Milway</a>
+	</div>
       </div>
       <!--
       <div class="container">
@@ -355,12 +360,5 @@
 			  </table>
         </div>
       </div>
-      <div class="container info-section">
-	      <footer>
-		      <h4>Local Organizers</h4>
-		      Arsalan Kahnemuyipour, Rebecca Tollan, Dan Milway
-	      </footer>
-      </div>
-    </div>
 </body>
 </html>
