--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li class="navbar-item">
             	<a class="navbar-link" href="#accommodation">Accommodation Information</a>
             </li>
-            <li class="navbar-item">
+            <!--<li class="navbar-item">
             	<a class="navbar-link" href="#registration">Registration</a>
-            </li>
+            </li>-->
             <li class="navbar-item">
               <a class="navbar-link" href="#programme">Programme</a>
             </li>
@@ -117,12 +117,12 @@
       		<p>Limited crash space may be available to students. If you are interested please contact <a href="mailto:becky.tollan@mail.utoronto.ca"><strong>Becky Tollan</strong></a> to request it.</p>
       	</div>
       </div>
-      <div class="container">
+      <!--<div class="container">
       	<div id="registration" class="info-section">
       		<h4>Registration</h4>
       		<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       	</div>
-      </div>
+      </div>-->
       <div class="container">
         <div id="programme" class="info-section">
           <h4>Programme</h4>
