modified:   index.html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <li class="navbar-item">
             	<a class="navbar-link" href="#accommodation">Accommodation Information</a>
             </li>
-            <!--<li class="navbar-item">
+            <li class="navbar-item">
             	<a class="navbar-link" href="#registration">Registration</a>
-            </li>-->
+            </li>
             <li class="navbar-item">
               <a class="navbar-link" href="#programme">Programme</a>
             </li>
@@ -117,12 +117,15 @@
       		<p>Limited crash space may be available to students. If you are interested please contact <a href="mailto:becky.tollan@mail.utoronto.ca"><strong>Becky Tollan</strong></a> to request it.</p>
       	</div>
       </div>
-      <!--<div class="container">
+      <div class="container">
       	<div id="registration" class="info-section">
       		<h4>Registration</h4>
-      		<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+		<p>Pre-registration is closed. If you wish to attend but have not registered, you can register on-site. The following fees will apply.</p>
+		<p>Students: $20 (conference registration only); $25(includes conference dinner)<br/>
+		Faculty: $30 (conference registration only); $40 (includes conference dinner)</p>
+		<!--<iframe src="https://docs.google.com/forms/d/1nJxpjQv4f-OMw2eNc39YuVqgiNCLEZRUb8_o6uaCTIU/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
       	</div>
-      </div>-->
+      </div>
       <div class="container">
         <div id="programme" class="info-section">
           <h4>Programme</h4>
@@ -136,7 +139,9 @@
 					<td>Registration and breakfast</td>
 				</tr>
 				<tr>
-					<td rowspan="3">10:00-11:30 am</td>
+					<td rowspan="3">10:00-11:30 am<br/>
+						Chair: Michelle Troberg
+					</td>
 					<td class="prog-cell">
 						Julien Carrier (University of Toronto), 
 						<a target="_blank" href="static/CarrierMOTH2016.pdf">
@@ -165,7 +170,9 @@
 					<td>Break</td>
 				</tr>
 				<tr>
-					<td rowspan="2">11:45 am-12:45 pm</td>
+					<td rowspan="2">11:45 am-12:45 pm<br/>
+						Chair: Bronwyn Bjorkman
+					</td>
 					<td class="prog-cell">
 						Dylan Bandstra (University of Toronto),
 						<a target="_blank" href="static/BandstraMOTH2016.pdf">
@@ -189,10 +196,11 @@
 				</tr>
 				<tr>
 					<td rowspan="3">
-						2:00-3:30 pm
+						2:00-3:30 pm <br/>
+						Chair: Diane Massam
 					</td>
 					<td class="prog-cell">
-						Cassandra Chapman (McMaster University) &amp; Martin Hackl (MIT),
+						Cassandra Chapman (McMaster University), Martin Hackl (MIT) &amp; Ivona Ku&#269;erov&#225; (McMaster University),
 						<a target="_blank" href="static/ChapmanHacklMOTH2016.pdf">
 							<em>Processing of logical form structure: Evidence from reconstruction for anaphoric binding</em>
 						</a>
@@ -222,7 +230,8 @@
 				</tr>
 				<tr>
 					<td rowspan="2">
-						4:00-5:00 pm
+						4:00-5:00 pm<br/>
+						Chair: Mihaela Pirvulescu
 					</td>
 					<td>
 						Martha Schwarz (McGill University),
@@ -244,7 +253,9 @@
 					<td>Break</td>
 				</tr>
 				<tr>
-					<td>5:15-6:15</td>
+					<td>5:15-6:15<br/>
+						Chair: Arsalan Kahnemuyipour
+					</td>
 					<td> <strong>Invited Speaker:</strong>
 						<br/>
 						Ivona Ku&#269;erov&#225; (McMaster University),
@@ -267,7 +278,9 @@
 					<td>Registration and breakfast</td>
 				</tr>
 				<tr>
-					<td rowspan="3">10:00-11:30 am</td>
+					<td rowspan="3">10:00-11:30 am<br/>
+						Chair: Jessica Coon
+					</td>
 					<td class="prog-cell">
 						Chris Bruno (McGill University), 
 						<a target="_blank" href="static/BrunoMOTH2016.pdf">
@@ -294,7 +307,9 @@
 					<td>Break</td>
 				</tr>
 				<tr>
-					<td rowspan="2">11:45 am-12:45 pm</td>
+					<td rowspan="2">11:45 am-12:45 pm<br/>
+						Chair: Rebecca Tollan
+					</td>
 					<td class="prog-cell">
 						Zoë McKenzie (University of Toronto)
 						<a target="_blank" href="static/McKenzieMOTH2016.pdf">
@@ -315,7 +330,8 @@
 				</tr>
 				<tr>
 					<td rowspan="2">
-						2:00-3:00 pm
+						2:00-3:00 pm<br/>
+						Chair: Elizabeth Cowper
 					</td>
 					<td class="prog-cell">Sigwan Thivierge (Concordia University), <em>A Morphosyntactic Analysis of Nishnaabemwin Person Hierarchy Effects</em> </td>
 				</tr>
@@ -333,7 +349,8 @@
 				</tr>
 				<tr>
 					<td rowspan="3">
-						3:30-4:30 pm
+						3:30-4:30 pm<br/>
+						Chair: Dan Milway
 					</td>
 					<td>
 						Symon Jory Stevens-Guille (University of Toronto),
