Revert "	modified:   index.html"
This reverts commit 68cb78be4a215e8efd7f97f0cbea0a326f0b415a.

	modified:   index.html
	modified:   static/McKenzieMOTH2016.pdf

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<td class="prog-cell">
 						Zoë McKenzie (University of Toronto)
 						<a target="_blank" href="static/McKenzieMOTH2016.pdf">
-							<em>Imperatives and Negation in Labrador Inuttut</em>
+							<em>Multifunctionality of the Optative Mood in Inuktitut</em>
 						</a>
 					</td>
 				</tr>
